# kube-ec

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  MULTI-LANGUAGE-SETUP.md  README-CODEGEN.md  README.md  SETUP-COMPLETE.md  TEST-RESULTS.md  WORKSPACE.bazel  WORKSPACE.bazel.old  docker-compose.yml  package.json
.claude/: settings.local.json
.github/workflows/: auto-format.yml  ci.yml
.serena/: project.yml
api/openapi/: codegen-config.yaml  user.yaml
deploy/helm/: README.md
deploy/helm/kube-ec-auth/: Chart.yaml  values.yaml
deploy/helm/kube-ec-auth/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/helm/kube-ec-gateway/: Chart.yaml  README.md  values.yaml
deploy/helm/kube-ec-gateway/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/helm/kube-ec-user/: Chart.yaml  values.yaml
deploy/helm/kube-ec-user/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/helm/kube-ec-web/: Chart.yaml  values-local.yaml  values.yaml
deploy/helm/kube-ec-web/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deploy/k8s/: README.md  postgres.yaml
deploy/kubernetes/: auth-deployment.yaml  gateway-deployment.yaml  kustomization.yaml  order-deployment.yaml  payment-deployment.yaml  product-deployment.yaml  secrets.yaml  user-deployment.yaml  web-deployment.yaml
docs/: gcp-setup.md
pkg/: go.mod  go.sum
pkg/auth/: jwt.go
pkg/config/: config.go
pkg/database/: database.go
pkg/errors/: errors.go
pkg/logger/: logger.go
pkg/proto/common/: BUILD.bazel  common.pb.go  common.proto
proto/: go.mod
proto/auth/: BUILD.bazel  auth.pb.go  auth.proto  auth_grpc.pb.go
proto/common/: BUILD.bazel  common.pb.go  common.proto
proto/order/: BUILD.bazel  order.pb.go  order.proto  order_grpc.pb.go
proto/payment/: BUILD.bazel  payment.pb.go  payment.proto  payment_grpc.pb.go
proto/product/: BUILD.bazel  product.pb.go  product.proto  product_grpc.pb.go
proto/user/: BUILD.bazel  user.pb.go  user.proto  user_grpc.pb.go
scripts/: generate-go.sh  generate-openapi.sh  generate-proto.sh  init.sql
services/auth/: Dockerfile  go.mod  go.sum
services/auth/cmd/server/: main.go
services/auth/internal/application/auth/: dto.go  service.go
services/auth/internal/domain/auth/: entity.go  password.go  repository.go  value_objects.go
services/auth/internal/infrastructure/persistence/: repository.go
services/auth/internal/presentation/grpc/: handler.go  interceptor.go
services/auth/proto/: BUILD.bazel  auth.pb.go  auth.proto  auth_grpc.pb.go
services/gateway/: BUILD.bazel  DDD-STRUCTURE.md  Dockerfile  clients.go  go.mod  go.sum  handlers.go  main.go
services/gateway/cmd/server/: main.go
services/gateway/internal/api/: .gitignore
services/gateway/internal/application/user/: dto.go  mapper.go  service.go
services/gateway/internal/domain/errors/: errors.go
services/gateway/internal/domain/user/: entity.go  password.go  repository.go  value_objects.go
services/gateway/internal/infrastructure/grpc/: auth_repository.go  client.go  helpers.go  user_repository.go
services/gateway/internal/presentation/http/: router.go
services/gateway/internal/presentation/http/handler/: mapper.go  user_handler.go
services/gateway/test/domain/: password_test.go  value_objects_test.go
services/gateway/test/handler/: user_handler_test.go
services/gateway/test/integration/: health_test.go
services/order/: Dockerfile  go.mod  main.go  repository.go  server.go
services/order/proto/: BUILD.bazel  order.pb.go  order.proto  order_grpc.pb.go
services/payment/: Dockerfile  go.mod  go.sum  main.go  repository.go  server.go
services/payment/proto/: BUILD.bazel  payment.pb.go  payment.proto  payment_grpc.pb.go
services/product/: Dockerfile  go.mod  main.go  repository.go  server.go
services/product/proto/: BUILD.bazel  product.pb.go  product.proto  product_grpc.pb.go
services/user/: Dockerfile  go.mod  go.sum  main.go  repository.go  server.go
services/user/proto/: BUILD.bazel  user.pb.go  user.proto  user_grpc.pb.go
tools/: BUILD.bazel  docker_build.sh  install-generators.sh
web/: .dockerignore  .prettierignore  BUILD.bazel  Dockerfile  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/cart/: page.tsx
web/app/login/: page.tsx
web/app/orders/: page.tsx
web/app/products/: page.tsx
web/app/products/[id]/: page.tsx
web/app/register/: page.tsx
web/components/: Header.tsx
web/lib/: api.ts  store.ts  types.ts
web/src/app/example/: page.tsx
web/src/lib/api/: client.ts  user.ts
web/src/types/api/: .gitignore
