load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/yourusername/kube-ec
# gazelle:proto disable_global
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Convenient aliases for building and deploying
alias(
    name = "web-image",
    actual = "//web:build_image",
)

# Build all services
alias(
    name = "build-all",
    actual = "//services/...",
)
