"""Bazel module dependencies for kube-ec multi-language project"""

module(
    name = "kube_ec",
    version = "1.0.0",
)

# Language-specific rules
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0")

# Future: Add Rust and Python rules
# bazel_dep(name = "rules_rust", version = "...")
# bazel_dep(name = "rules_python", version = "...")

# Go SDK setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

# Go dependencies
# Note: Currently using gateway's go.mod as the primary source
# Each Go service should manage its own dependencies via go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//services/gateway:go.mod")
use_repo(go_deps, "com_github_getkin_kin_openapi", "com_github_gin_contrib_cors", "com_github_gin_gonic_gin", "com_github_oapi_codegen_runtime", "com_github_riku_kano_kube_ec_proto", "org_golang_google_grpc")
