load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "proto_library")

proto_library(
    name = "payment_proto",
    srcs = ["payment.proto"],
    deps = ["//proto/common:common_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "payment_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yourusername/kube-ec/proto/payment",
    proto = ":payment_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_go_proto"],
)
