load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "product_proto",
    srcs = ["product.proto"],
    deps = ["//proto/common:common_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "product_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yourusername/kube-ec/proto/product",
    proto = ":product_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_go_proto"],
)
