load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "proto_library")

proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
    deps = ["//proto/common:common_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "user_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yourusername/kube-ec/proto/user",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_go_proto"],
)
