load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Riku-KANO/kube-ec/services/gateway
gazelle(name = "gazelle")

# OpenAPI generated code library
go_library(
    name = "api",
    srcs = ["internal/api/user.gen.go"],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_oapi_codegen_runtime//:go_default_library",
        "@com_github_oapi_codegen_runtime//types:go_default_library",
    ],
)

# Domain layer
go_library(
    name = "domain_user",
    srcs = [
        "internal/domain/user/entity.go",
        "internal/domain/user/repository.go",
        "internal/domain/user/value_objects.go",
    ],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/domain/user",
    visibility = ["//visibility:public"],
)

go_library(
    name = "domain_errors",
    srcs = ["internal/domain/errors/errors.go"],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/domain/errors",
    visibility = ["//visibility:public"],
)

# Application layer
go_library(
    name = "application_user",
    srcs = [
        "internal/application/user/dto.go",
        "internal/application/user/mapper.go",
        "internal/application/user/service.go",
    ],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/application/user",
    visibility = ["//visibility:public"],
    deps = [
        ":domain_errors",
        ":domain_user",
    ],
)

# Infrastructure layer
go_library(
    name = "infrastructure_grpc",
    srcs = [
        "internal/infrastructure/grpc/client.go",
        "internal/infrastructure/grpc/user_repository.go",
    ],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/infrastructure/grpc",
    visibility = ["//visibility:public"],
    deps = [
        ":domain_errors",
        ":domain_user",
        "//proto/common:common_go_proto",
        "//proto/user:user_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)

# Presentation layer
go_library(
    name = "presentation_handler",
    srcs = [
        "internal/presentation/http/handler/mapper.go",
        "internal/presentation/http/handler/user_handler.go",
    ],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/presentation/http/handler",
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        ":application_user",
        ":domain_errors",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_oapi_codegen_runtime//types:go_default_library",
    ],
)

go_library(
    name = "presentation_http",
    srcs = ["internal/presentation/http/router.go"],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/internal/presentation/http",
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        ":presentation_handler",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

# Main server
go_library(
    name = "server_lib",
    srcs = ["cmd/server/main.go"],
    importpath = "github.com/Riku-KANO/kube-ec/services/gateway/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        ":application_user",
        ":infrastructure_grpc",
        ":presentation_handler",
        ":presentation_http",
    ],
)

go_binary(
    name = "gateway",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
