load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "github.com/Riku-KANO/kube-ec/pkg/proto/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)
